prepare release 2021.6-rc1
