# apps/core/purpleserver/providers/extension/models/usps_international.py
@@ -2,13 +2,13 @@ from django.db import models
 from purpleserver.providers.models.carrier import Carrier
 
 
-class USPSSettings(Carrier):
-    CARRIER_NAME = 'usps'
+class USPSInternationalSettings(Carrier):
+    CARRIER_NAME = 'usps_international'
 
     class Meta:
-        db_table = "usps-settings"
-        verbose_name = 'USPS Settings'
-        verbose_name_plural = 'USPS Settings'
+        db_table = "usps_international-settings"
+        verbose_name = 'USPS International Settings'
+        verbose_name_plural = 'USPS International Settings'
 
     username = models.CharField(max_length=200)
     password = models.CharField(max_length=200)
@@ -21,4 +21,4 @@ class USPSSettings(Carrier):
         return self.CARRIER_NAME
 
 
-SETTINGS = USPSSettings
+SETTINGS = USPSInternationalSettings
